sqlx_insert/tests/ui/unnamed_fields.stderr
error: proc-macro derive panicked
 --> tests/ui/unnamed_fields.rs:5:10
  |
5 | #[derive(SQLInsert, Clone, Debug)]
  |          ^^^^^^^^^
  |
  = help: message: failed to expand SQLInsert macro: Error("only named struct fields are supported")

warning: unused import: `async_trait::async_trait`
 --> tests/ui/unnamed_fields.rs:2:5
  |
2 | use async_trait::async_trait;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `sqlx::Postgres`
 --> tests/ui/unnamed_fields.rs:3:5
  |
3 | use sqlx::Postgres;
  |     ^^^^^^^^^^^^^^
